# pzombie

./: .gitignore  README.md  TODO  actions.py  cartesian_stiffness.py  controller.py  example.py  kinematics.py  make_plant.py  panda_ik.py  policy_system.py  pyproject.toml  pzombie.py  state.py
assets/: cup.urdf  eraser.urdf  hydro_panda.urdf  table.urdf  whiteboard.urdf  workspace.dmd.yaml
examples/: eraser_demo.py  flip_cup.py  teleop_demo.py
pzombie/: actions.py  cartesian_stiffness.py  components.py  kinematics.py  policy_system.py  pzombie.py
